<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BirthDay</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="sdcard_warning">Please insert SDCard</string>
    <string name="sderror">Error occurred in SDCard, or there is no enough space in SDCard.</string>
    <string name="error_fill_data">Please fill out all data</string>
    <string name="error_fill_birthday">Please fill birthday/next birthday</string>
    <string name="error_date_format">Please fill correct date : MM/dd/yyyy</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add_pupil">Add New Ticket</string>
    <string name="btn_export">Export to CSV</string>
    <string name="btn_import">Import from CSV</string>
    <string name="btn_close">Close App</string>
    

</resources>
