<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_horizontal"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="Settings"
        android:textColor="#000000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_today"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="right|center_vertical"
            android:padding="10dp"
            android:singleLine="true"
            android:text="MM/DD/YYYY"
            android:textSize="16sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:text="Today:"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt_fontsize"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:hint="Font Size"
            android:inputType="number"
            android:singleLine="true"
            android:textDirection="anyRtl" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:text="Font Size:"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" S" />

        <EditText
            android:id="@+id/edt_refreshtime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:hint="Refresh Time"
            android:inputType="number"
            android:singleLine="true"
            android:textDirection="anyRtl" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:text="Refresh Time:"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_ok" />

    <Button
        android:id="@+id/btn_add_pupil"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_add_pupil" />

    <Button
        android:id="@+id/btn_export"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_export" />

    <Button
        android:id="@+id/btn_import"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_import" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_close" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_cancel" />

</LinearLayout>